--- a/src/page/index.ejs
+++ b/src/page/index.ejs
@@ -5,6 +5,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-
+    <div id="root" class="app-wrap"></div>
 </body>
 </html>
