--- a/src/components/LinkWall/LinkWall.scss
+++ b/src/components/LinkWall/LinkWall.scss
@@ -1,15 +1,39 @@
 @import "../../static/scss/common";
 
 .link-wall-wrap {
-
+  height: auto;
+  padding: 50px 0px;
+  position: relative;
+  width: 100%;
 }
 
 .link-wall-content {
-
+  background-color: rgba(0, 0, 0, .2);
+  color: #ffffff;
+  font-size: 14px;
+  height: auto;
+  line-height: 1.5;
+  margin: 0 auto;
+  padding: 20px;
+  width: 600px;
 }
 
 .link-list {
-  .link-list-item {
+  list-style: none;
+  margin: 0px;
 
+  .link-list-item {
+    color: #ffffff;
+
+    a.link-action {
+      color: #ffffff;
+      font-size: 16px;
+      line-height: 1.5;
+      text-decoration: none;
+
+      &:hover {
+        opacity: .8;
+      }
+    }
   }
 }
