--- a/src/components/Wallpaper/Wallpaper.scss
+++ b/src/components/Wallpaper/Wallpaper.scss
@@ -1,8 +1,13 @@
 @import "../../static/scss/common";
 
 .app-content .app-wallpaper {
+  background-color: #2e2e2e;
   background-image:  url('../../static/images/bg-img-default-1920x1080.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   height: 100%;
   position: absolute;
   width: 100%;
+  z-index: -1;
 }
