--- a/src/static/scss/common.scss
+++ b/src/static/scss/common.scss
@@ -14,6 +14,7 @@ html, body {
 }
 
 .app-content {
+  font: 12px/1.5 Microsoft YaHei,tahoma,arial,Hiragino Sans GB,\\5b8b体,sans-serif;
   height: 100%;
   overflow: hidden;
   overflow-y: auto;
